--- a/app/src/main/res/layout/fragment_care_main.xml
+++ b/app/src/main/res/layout/fragment_care_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/completeButton"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
@@ -204,7 +205,7 @@
             android:padding="20dp">
 
             <Button
-                android:id="@+id/locationButton"
+                android:id="@+id/Button5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -213,7 +214,7 @@
                 android:layout_weight="1"
                 android:background="#573E8B28"
                 android:backgroundTint="#573E8B28"
-                android:text="위치확인" />
+                android:text="특이사항" />
 
             <Button
                 android:id="@+id/locationButton2"
@@ -225,10 +226,10 @@
                 android:layout_weight="1"
                 android:background="#573E8B28"
                 android:backgroundTint="#573E8B28"
-                android:text="경로확인" />
+                android:text="산책하기" />
 
             <Button
-                android:id="@+id/completeButton0"
+                android:id="@+id/completeButton1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
