--- a/app/src/main/res/layout/fragment_care_todolist.xml
+++ b/app/src/main/res/layout/fragment_care_todolist.xml
@@ -5,6 +5,8 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
     tools:context=".CareTodolistFragment">
 
     <LinearLayout
@@ -17,16 +19,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView4"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="20dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="TODO LIST"
-            android:textSize="20sp"
-            android:textStyle="normal" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButton3"
+                android:layout_width="40dp"
+                android:layout_height="35dp"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="5dp"
+                android:backgroundTint="#FFFFFF"
+                android:scaleType="centerCrop"
+                android:src="@drawable/arrow"
+                android:stateListAnimator="@null"
+                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="30dp"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="TODO LIST"
+                android:textSize="20sp"
+                android:textStyle="normal" />
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="370dp"
