--- a/app/src/main/res/layout/fragment_sue.xml
+++ b/app/src/main/res/layout/fragment_sue.xml
@@ -15,17 +15,35 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="20dp"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="신고하기"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textStyle="normal" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton4"
+                    android:layout_width="40dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="5dp"
+                    android:backgroundTint="#FFFFFF"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/arrow"
+                    android:stateListAnimator="@null"
+                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="40dp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="신고하기"
+                    android:textSize="20sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
 
