--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#B89696"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
     tools:context=".WriteFragment">
 
     <ScrollView
@@ -22,16 +23,35 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView4"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="46dp"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_marginTop="20dp"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="맡김글 작성"
-                    android:textSize="20sp"
-                    android:textStyle="normal" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/imageButton4"
+                        android:layout_width="40dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="bottom"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#FFFFFF"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/arrow"
+                        android:stateListAnimator="@null"
+                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="46dp"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="40dp"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:text="맡김글 작성"
+                        android:textSize="20sp"
+                        android:textStyle="normal" />
+                </LinearLayout>
 
                 <CalendarView
                     android:id="@+id/calendarView"
