--- a/app/src/main/res/layout/fragment_end.xml
+++ b/app/src/main/res/layout/fragment_end.xml
@@ -56,7 +56,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="#573E8B28"
                 android:backgroundTint="#573E8B28"
-                android:text="돌아가기"
+                android:text="홈으로 돌아가기"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
 
