--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -48,7 +48,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginRight="40dp"
                         android:gravity="center_horizontal|center_vertical"
-                        android:text="맡김글 작성"
+                        android:text="할 일 "
                         android:textSize="20sp"
                         android:textStyle="normal" />
                 </LinearLayout>
@@ -143,7 +143,8 @@
                             android:layout_width="34dp"
                             android:layout_height="wrap_content"
                             android:minWidth="48dp"
-                            android:minHeight="48dp" />
+                            android:minHeight="48dp"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                         <ImageView
                             android:id="@+id/imageView1"
@@ -175,7 +176,8 @@
                             android:layout_width="34dp"
                             android:layout_height="wrap_content"
                             android:minWidth="48dp"
-                            android:minHeight="48dp" />
+                            android:minHeight="48dp"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                         <ImageView
                             android:id="@+id/imageView2"
