--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -126,6 +126,19 @@
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <Button
+                        android:id="@+id/button3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+
+                        android:layout_weight="1"
+                        android:background="@drawable/bold1"
+                        android:gravity="center"
+                        android:text="교육영상 시청"
+                        tools:ignore="TouchTargetSizeCheck" />
+
+                    <Button
                         android:id="@+id/goDogList"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
