--- a/app/src/main/res/layout/activity_local.xml
+++ b/app/src/main/res/layout/activity_local.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/pink_round_button"
+        android:background="#573E8B28"
+        android:backgroundTint="#573E8B28"
         android:text="내위치 확인"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toStartOf="@+id/backButton"
@@ -23,7 +24,6 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:fontFamily="@font/gmarket_sans_ttf_medium"
         android:id="@+id/outputLat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,7 +57,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/round_button"
+        android:background="#573E8B28"
+        android:backgroundTint="#573E8B28"
         android:text="저장하기"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +72,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/gmarket_sans_ttf_medium"
         app:layout_constraintStart_toEndOf="@+id/textView32"
         app:layout_constraintTop_toBottomOf="@+id/outputLat" />
 
@@ -81,7 +81,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/gmarket_sans_ttf_medium"
         android:text="위도 :"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/startButton" />
@@ -92,7 +91,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/gmarket_sans_ttf_medium"
         android:text="경도 :"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView31" />
