--- a/app/src/main/res/layout/fragment_join2.xml
+++ b/app/src/main/res/layout/fragment_join2.xml
@@ -8,65 +8,56 @@
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/imageButton4"
-                android:layout_width="40dp"
-                android:layout_height="35dp"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="5dp"
-                android:backgroundTint="#FFFFFF"
-                android:scaleType="centerCrop"
-                android:src="@drawable/arrow"
-                android:stateListAnimator="@null"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="40dp"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="회원가입(1/2)"
-                android:textSize="20sp"
-                android:textStyle="normal" />
-        </LinearLayout>
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="회원가입(2/2)"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textStyle="normal" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton4"
+                    android:layout_width="40dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="5dp"
+                    android:backgroundTint="#FFFFFF"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/arrow"
+                    android:stateListAnimator="@null"
+                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="40dp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="회원가입(2/2)"
+                    android:textSize="20sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="410dp"
                 android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:background="#F6F6F6"
                 android:orientation="vertical"
                 android:padding="10dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/profileImageView"
@@ -87,7 +78,7 @@
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="@+id/profileImageView"
                         app:layout_constraintTop_toTopOf="@+id/profileImageView"
-                        tools:ignore="SpeakableTextPresentCheck" />
+                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
@@ -101,7 +92,7 @@
                         android:id="@+id/registerId"
                         android:layout_width="218dp"
                         android:layout_height="48dp"
-                        android:layout_marginLeft="18dp"
+                        android:layout_marginLeft="45dp"
                         android:ems="10"
                         android:hint="아이디"
                         android:inputType="textPersonName"
@@ -111,7 +102,7 @@
                         android:id="@+id/idCheckButton"
                         android:layout_width="75dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="5dp"
                         android:background="#CABAAA"
                         android:backgroundTint="#CABAAA"
                         android:gravity="center_horizontal|center_vertical"
@@ -183,6 +174,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -208,7 +200,7 @@
                             android:id="@+id/locationButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="100dp"
+                            android:layout_marginLeft="90dp"
                             android:layout_marginTop="20dp"
                             android:background="#CABAAA"
                             android:backgroundTint="#CABAAA"
