--- a/app/src/main/res/layout/fragment_care_info_update.xml
+++ b/app/src/main/res/layout/fragment_care_info_update.xml
@@ -39,10 +39,16 @@
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/inputImageView"
                     android:layout_width="130dp"
-                    android:layout_height="130dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="115dp"
                     android:layout_marginTop="20dp"
                     android:src="@mipmap/ic_launcher" />
+
+                <Button
+                    android:id="@+id/button10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="앨범" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -126,6 +132,7 @@
                     android:background="#573E8B28"
                     android:backgroundTint="#573E8B28"
                     android:text="수정하기" />
+
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
